--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,3 +32,8 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
+    - name: Test Summary
+      uses: test-summary/action@v2
+      with:
+        paths: "test-results/test/TEST-*.xml"
+      if: always()
